poke/testsuite/poke.pkl/struct-types-diag-11.pk
/* { dg-do compile } */

deftype Bar =
  struct
  {
    int i;
    int j;
    int i; /* { dg-error "duplicated" } */
  };
